Fixed bug for newer versions of WebKit browsers where plus icon was not centered.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -43,6 +43,9 @@
         }
 
         & > span {
+            display: block;
+            height: 100%;
+            
             position: absolute;
             top: 50%;
             left: 50%;
@@ -52,6 +55,13 @@
             padding: 0;
 
             transition: transform 1s;
+
+            & > span {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
     }
 
